--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -31,16 +31,18 @@ td {
 
 html,
 body {
-  min-height: 100%;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  height: 100%;
+  width: 100%;
   margin: 0;
   border: 0;
   top: 0;
   right: 0;
   right: 0;
   bottom: 0;
+
+  font: {
+    family: 'Open Sans', Helvetica, Arial, sans-serif;
+    weight: 300;
+  }
 }
 
 * {
@@ -72,8 +74,10 @@ strong,
 th,
 var,
 optgroup {
-  font-style: normal;
-  font-weight: normal;
+  font: {
+    style: normal;
+    weight: normal;
+  }
 }
 
 del,
@@ -121,10 +125,13 @@ textarea,
 select,
 optgroup,
 option {
-  font-family: inherit;
-  font-size: inherit;
-  font-style: normal;
-  font-weight: normal;
+  font: {
+    family: inherit;
+    size: inherit;
+    style: normal;
+    weight: normal;
+  }
+
   outline: none;
   border: none;
 }
