--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -12,7 +12,7 @@
 
     .left,
     .right {
-      width: 140px;
+      width: 7%;
       height: 0;
       position: absolute;
     }
@@ -30,7 +30,7 @@
     }
 
     .main {
-      margin: 55px 140px;
+      margin: 55px 7%;
       height: 100%;
     }
   }
