--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -8,19 +8,9 @@
 
     .navbar {
       width: 100%;
-      height: 60px;
       position: fixed;
       top: 0;
       z-index: 3;
-      background: rgba(26, 26, 26, 1);
-
-      .aggergationbar {
-        display: inline;
-      }
-
-      .menubar {
-        display: none;
-      }
     }
 
     .index-title {
@@ -29,15 +19,18 @@
       position: fixed;
       top: 60px;
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       background: rgba(242, 242, 242, 1);
 
 
       p {
-        font-size: 24px;
-        font-family: MicrosoftYaHei;
-        font-weight: 400;
+        font: {
+          size: 24px;
+          family: MicrosoftYaHei;
+          weight: 400;
+        }
+        margin-left: 7%;
         color: rgba(51, 51, 51, 1);
       }
     }
