Further modifications and updates

--- a/src/pages/aboutus/index.scss
+++ b/src/pages/aboutus/index.scss
@@ -55,8 +55,9 @@
     }
 
     .about-main {
-      margin: 60px 25%;
       height: 100%;
+      margin: 60px 25%;
+      margin-bottom: 100px;
 
       p {
         text-indent: 2em;
