--- a/src/pages/aboutshotcut/index.scss
+++ b/src/pages/aboutshotcut/index.scss
@@ -31,7 +31,6 @@
         family: MicrosoftYaHei;
         weight: 400;
       }
-
       color: rgba(51, 51, 51, 1);
     }
   }
@@ -68,7 +67,7 @@
           family: MicrosoftYaHei;
           weight: 400;
         }
-
+        margin-bottom: 100px;
         text-indent: 2em;
         color: rgba(51, 51, 51, 1);
         line-height: 32px;
