--- a/src/pages/rank/index.scss
+++ b/src/pages/rank/index.scss
@@ -1,83 +1,93 @@
 .rank-page {
+  width: 100%;
+  min-width: 1050px;
+  height: 100%;
+
+  .header {
     width: 100%;
-    min-width: 1050px;
-    height: 100%;
-  
-    .header {
+
+    .navbar {
       width: 100%;
-  
-      .navbar {
-        width: 100%;
-        position: fixed;
-        top: 0;
-        z-index: 3;
-      }
-  
-      .index-title {
-        width: 100%;
-        height: 80px;
-        position: fixed;
-        top: 60px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgba(242, 242, 242, 1);
-  
-  
-        p {
-          font-size: 24px;
-          font-family: MicrosoftYaHei;
-          font-weight: 400;
+      position: fixed;
+      top: 0;
+      z-index: 3;
+    }
+  }
+
+  .container {
+    width: 100%;
+
+    .left,
+    .right {
+      width: 7%;
+      height: 0;
+      position: absolute;
+    }
+
+    .left {
+      left: 0;
+      //background-color: blue;
+      background-color: #FFF;
+    }
+
+    .right {
+      right: 0;
+      //background-color: red;
+      background-color: #FFF;
+    }
+
+    .main {
+      margin: 164px 7%;
+      height: 100%;
+
+      .hot-title {
+        width: 400px;
+        margin-bottom: 20px;
+
+        .hot-icon {
+          width: 30px;
+          height: 10px;
+          display: inline-block;
+          margin-bottom: 15px;
+          background: linear-gradient(30deg,
+              rgba(255, 85, 51, 1) 0%,
+              rgba(255, 108, 0, 1) 100%);
+          border-radius: 5px;
+        }
+
+        .hot-title-name {
+          height: 30px;
+          text-align: left !important;
+
+          font: {
+            size: 30px;
+            family: MicrosoftYaHei;
+            weight: 400;
+          }
+
           color: rgba(51, 51, 51, 1);
+          line-height: 42px;
         }
       }
-    }
-  
-    .container {
-      width: 100%;
-  
-      .left,
-      .right {
-        width: 7%;
-        height: 0;
-        position: absolute;
-      }
-  
-      .left {
-        left: 0;
-        //background-color: blue;
-        background-color: #FFF;
-      }
-  
-      .right {
-        right: 0;
-        //background-color: red;
-        background-color: #FFF;
-      }
-  
-      .main {
-        margin: 164px 7%;
-        height: 100%;
-  
-        .items-row {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: flex-start;
-          align-items: center;
-        }
-      }
-    }
-  
-    .footer {
-      width: 100%;
-  
-      .line {
-        width: 100%;
-        height: 2px;
-        margin: 0;
-        padding: 0;
-        background: rgba(255, 85, 0, 1);
+
+      .hot-row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
       }
     }
   }
-  
+
+  .footer {
+    width: 100%;
+
+    .line {
+      width: 100%;
+      height: 2px;
+      margin: 0;
+      padding: 0;
+      background: rgba(255, 85, 0, 1);
+    }
+  }
+}
