--- a/src/pages/about/index.scss
+++ b/src/pages/about/index.scss
@@ -11,6 +11,7 @@
       position: fixed;
       top: 0;
       z-index: 3;
+      background: rgba(26, 26, 26, 1);
     }
   }
 
@@ -25,15 +26,18 @@
 
 
     p {
-      font-size: 24px;
-      font-family: MicrosoftYaHei;
-      font-weight: 400;
+      font: {
+        size: 24px;
+        family: MicrosoftYaHei;
+        weight: 400;
+      }
       color: rgba(51, 51, 51, 1);
     }
   }
 
   .about-content {
     width: 100%;
+    margin-bottom: 100px;
 
     .about-left,
     .about-right {
@@ -59,10 +63,12 @@
       height: 100%;
 
       p {
+        font: {
+          size: 16px;
+          family: MicrosoftYaHei;
+          weight: 400;
+        }
         text-indent: 2em;
-        font-size: 16px;
-        font-family: MicrosoftYaHei;
-        font-weight: 400;
         color: rgba(51, 51, 51, 1);
         line-height: 32px;
       }
