--- a/src/pages/player/index.scss
+++ b/src/pages/player/index.scss
@@ -1,3 +1,7 @@
+.play-moreWords {
+  font-size: 20px;
+}
+
 .player-page {
   width: 100%;
   height: 100%;
@@ -84,6 +88,7 @@
         .play-ad {
           float: right;
           margin-top: 14px;
+          z-index: 1;
 
           a {
             img {
