--- a/src/pages/player/index.scss
+++ b/src/pages/player/index.scss
@@ -29,6 +29,13 @@
         background: #000;
 
         .video-js .vjs-big-play-button {}
+
+        .vjs-poster {
+          -webkit-filter: blur(5px);
+          -moz-filter: blur(5px);
+          -ms-filter: blur(5px);
+          filter: blur(5px);
+        }
       }
 
       .play-info {
