--- a/src/assets/css/custom-player.scss
+++ b/src/assets/css/custom-player.scss
@@ -3,6 +3,13 @@
   font-family: "PingFang SC", "Helvetica Neue", "Hiragino Sans GB", "Segoe UI", "Microsoft YaHei", "微软雅黑", sans-serif;
 }
 
+.vjs-custom-skin>.video-js .vjs-poster {
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
 .vjs-custom-skin>.video-js .vjs-menu-button-inline.vjs-slider-active,
 .vjs-custom-skin>.video-js .vjs-menu-button-inline:focus,
 .vjs-custom-skin>.video-js .vjs-menu-button-inline:hover,
